<resources>
    <string name="app_name">Prototip 2</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="no_image">Profil resmi seçiniz</string>
    <string name="password_nomatch">Şifreleriniz uyuşmuyor</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string-array name="genders_array">
        <item>Cinsiyet</item>
        <item>Kadın</item>
        <item>Erkek</item>
        <item>Diğer</item>

    </string-array>

    <string-array name="search_genders_array">
        <item>Cinsiyet</item>
        <item>Kadın</item>
        <item>Erkek</item>
        <item>Fark Etmez</item>
    </string-array>

    <string-array name="city_array">
        <item>İzmir</item>
        <item>İstanbul</item>
        <item>Aydın</item>
        <item>Eskişehir</item>
    </string-array>

    <string-array name="car_type">
        <item>Araba</item>
        <item>Motor</item>
    </string-array>

    <string-array name="brand_array_car">
        <item>BMW</item>
        <item>MERCEDES</item>
        <item>HONDA</item>
        <item>AUDI</item>
    </string-array>

    <string-array name="BMW_Models">
        <item>320</item>
        <item>520</item>
        <item>730</item>
    </string-array>

    <string-array name="MERCEDES_Models">
        <item>a180</item>
        <item>c180</item>
        <item>c200</item>
        <item>e200</item>
    </string-array>

    <string-array name="HONDA_Models">
        <item>Civic</item>
        <item>City</item>
        <item>HRV</item>
        <item>CRV</item>
    </string-array>

    <string-array name="AUDI_Models">
        <item>a3</item>
        <item>a4</item>
        <item>a5</item>
        <item>a6</item>
    </string-array>

    <string-array name="model_year">
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
    </string-array>

    <integer-array name="passanger_count_array">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>1</item>
    </integer-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page">Ana Sayfa</string>
    <string name="item1_deneme">profileCallback</string>
    <string name="app_name_header">Prototip2</string>
    <string name="Close">Close</string>
    <string name="Open">Open</string>
    <string name="profile">Profil</string>
    <string name="Requests">Onaylı İstekler</string>
    <string name="Map">Harita</string>
    <string name="Questions">Soru-Cevap</string>
    <string name="Details">Detay</string>
    <string name="SignOut">Çıkış Yap</string>
    <string name="questionToMe">Gelen Sorular</string>
    <string name="requestsToMyPosts">Gelen İstekler</string>
    <string name="requestISent">Gönderdiğim İstekler</string>
    <string name="wishList">Kaydedilenler</string>
    <string name="erman_kan_derici">Erman Kan Derici</string>
    <string name="erkek">Erkek</string>
    <string name="textview">TextView</string>
    <string name="onayla">Onayla</string>
    <string name="bildir">Bildir</string>
    <string name="button">Button</string>
    <string name="prototip2">Prototip2</string>
    <string name="ara">ARA</string>
    <string name="detay">Detay</string>
    <string name="harita">Harita</string>
    <string name="lan_yukle">İlanı Yükle</string>
    <string name="lan_ver">İLAN VER</string>
    <string name="ilan_detay">İLAN DETAY</string>
    <string name="rota_bel_rle">ROTA BELİRLE</string>
    <string name="lan_y_kle">İlanı Yükle</string>
    <string name="ilan_baslik">İLAN BAŞLIĞI</string>
    <string name="cevabiniz">CEVABINIZ</string>
    <string name="soru">SORU</string>
    <string name="asdasd_adasdasd_asdas_das_das_da_sd_asd_as_das_das_d_asd_asd_asd_as_fas_d_asfas_das_das_fasdasdd_asdjkashdkjas_daskjdhasd_baksjd_askjdbasjda_sdkasdas_d">asDASD ADASDASD ASDAS DAS DAS DA SD ASD AS DAS DAS D ASD ASD ASD AS FAS D ASFAS DAS DAS Fasdasdd asdjkashdkjas daskjdhasd baksjd askjdbasjda sdkasdAS D</string>
    <string name="cevap_buraya">Cevabınızı buraya yazabilirsiniz</string>
    <string name="gonder">Gönder</string>
    <string name="engelli_yok">Henüz hiçbir kullanıcıyı engellemediniz.</string>
    <string name="kullanici_onayla">Kullanıcı Onayla</string>
    <string name="ana_sayfa">ANA SAYFA</string>
    <string name="lan_ekle">İlan Ekle</string>
    <string name="ilan_ara">İlan Ara</string>
    <string name="kayıtlı_ilan_yok">Geçmişte kayıtlı ilanınız bulunmamaktadır.</string>
    <string name="ge_m_lanlariniz">GEÇMİŞ İLANLARINIZ</string>
    <string name="gecmis_ilanlarim">GEÇMİŞ İLANLARIM</string>
    <string name="aktif_ilanlariniz">AKTİF İLANLARINIZ</string>
    <string name="aktif_ilan_yok">Aktif ilanınız bulunmamaktadır.</string>
    <string name="kabul_istek_yok">Kabul edilmiş isteğiniz bulunmamaktadır</string>
    <string name="kabul_edilen_yolculuklar">İsteğinizin Kabul Edildiği Yolculuklar</string>
    <string name="beklemede_yolculuklar">İsteğinizin Beklemede Olduğu Yolculuklar</string>
    <string name="beklemede_istek_yok">Beklemede olan isteğiniz bulunmamaktadır</string>
    <string name="yaklasan">Yaklaşan</string>
    <string name="onayli">Onaylı</string>
    <string name="bekleyen">Bekleyen</string>
    <string name="gecmis">Geçmiş</string>
    <string name="onayli_istek_yok">Herhangi bir ilanda onaylı isteğiniz bulunmamaktadır.</string>
    <string name="cinsiyet">Cinsiyet</string>
    <string name="tarih">Tarih</string>
    <string name='araç_yok'>Eklediğiniz bir araç bulunmamaktadır</string>
    <string name="ilanbilgileri"><u>IlanBilgileri</u>
    </string>

</resources>