<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item android:id="@+id/homePage"
    android:title="@string/home_page"
    android:icon="@drawable/ic_baseline_home_24"></item>

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"></item>

    <item
        android:id="@+id/wish_list"
        android:icon="@drawable/ic_star_"
        android:title="@string/wishList"></item>

    <item
        android:id="@+id/my_cars"
        android:icon="@drawable/ic_car"
        android:title="Araçlarım"></item>



    <item
        android:id="@+id/RequestsISent"
        android:icon="@drawable/sent"
        android:title="@string/requestISent"></item>


    <item
        android:id="@+id/myPosts"
        android:icon="@drawable/ic_baseline_folder"
        android:title="Postlarım"
        ></item>

    <item
        android:id="@+id/questionsToMe"
        android:icon="@drawable/ic_question_mark"
        android:title="@string/questionToMe"></item>

    <item
        android:id="@+id/requestsToMyPosts"
        android:icon="@drawable/ic_requests_to_me"
        android:title="@string/requestsToMyPosts"></item>

    <item
        android:id="@+id/blockedUsers"
        android:icon="@drawable/ic_baseline_block"
        android:title="Engelli kullanıcılar"></item>

    <item
        android:id="@+id/signOut"
        android:icon="@drawable/ic_baseline_close"
        android:title="@string/SignOut"></item>
</menu>