<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/spinner_shape">

    <ImageView
        android:id="@+id/imgAcceptedRequestPic"
        android:layout_width="125sp"
        android:layout_height="125sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@null"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/txtAcceptedRequestName"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/gray_circle_drawable"
        android:gravity="center|center_vertical"
        android:text="@string/erman_kan_derici"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgAcceptedRequestPic"
        app:layout_constraintTop_toTopOf="@+id/imgAcceptedRequestPic" />

    <TextView
        android:id="@+id/txtAcceptedRequestBirthdate"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/gray_circle_drawable"
        android:text="@string/erkek"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtAcceptedRequestGender"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtAcceptedRequestGender"
        app:layout_constraintTop_toBottomOf="@+id/txtAcceptedRequestGender" />

    <TextView
        android:id="@+id/txtAcceptedRequestGender"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/gray_circle_drawable"
        android:gravity="center"
        android:text="@string/textview"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/txtAcceptedRequestName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtAcceptedRequestName"
        app:layout_constraintTop_toBottomOf="@+id/txtAcceptedRequestName" />

    <Button
        android:id="@+id/btnAcceptedRequestConfirmUser"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:text="@string/onayla"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/imgAcceptedRequestPic"
        app:layout_constraintEnd_toStartOf="@+id/btnAcceptedRequestDeclineUser"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtAcceptedRequestBirthdate"
        app:layout_constraintTop_toBottomOf="@+id/txtAcceptedRequestBirthdate" />

    <Button
        android:id="@+id/btnAcceptedRequestDeclineUser"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="16dp"
        android:text="@string/bildir"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btnAcceptedRequestConfirmUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAcceptedRequestConfirmUser"
        app:layout_constraintTop_toTopOf="@+id/btnAcceptedRequestConfirmUser" />


</androidx.constraintlayout.widget.ConstraintLayout>