<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.MainActivity.HomeFragment">

    <Button
        android:id="@+id/btnConfirmUser"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginBottom="236dp"
        android:background="@drawable/deneme_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/kullanici_onayla"
        android:textColor="#D3D3D3"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddPostFragmentH"
        app:layout_constraintEnd_toEndOf="@+id/btnSearchPost"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnSearchPost"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnAddPostFragmentH"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/deneme_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/lan_ekle"
        android:textColor="#ffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSearchPost"
        app:layout_constraintEnd_toEndOf="@+id/btnSearchPost"
        app:layout_constraintStart_toStartOf="@+id/btnSearchPost" />

    <Button
        android:id="@+id/btnSearchPost"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/deneme_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/ilan_ara"
        android:textColor="#ffff"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
<!--
android:background="#A66E6F81"
-->