<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.UploadPostActivity.UploadPostActivity">

    <Button
        android:id="@+id/btnUploadPostDetails"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/deneme_button"
        android:text="@string/detay"
        app:layout_constraintEnd_toStartOf="@+id/btnUploadPostMap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUploadPostMap"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/deneme_button"
        android:text="@string/harita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnUploadPostDetails"
        app:layout_constraintTop_toTopOf="@+id/btnUploadPostDetails" />

    <FrameLayout
        android:id="@+id/postUploadFrameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnUploadPost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUploadPostMap">

    </FrameLayout>

    <Button
        android:id="@+id/btnUploadPost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:onClick="AUPUploadPost"
        android:text="@string/lan_yukle"
        android:background="@drawable/deneme_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postUploadFrameLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>